--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,17 @@ build/
 
 ### VS Code ###
 .vscode/
+
+compose.yaml
+application.yml
+application-dev.yml
+application-docker.yml
+application-prod.yml
+
+.env
+
+full docker app config.txt
+.txt*
+.txt
+
+
